// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectProfileImage > should handle upload file 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="profile-image focus-within:ring-theme-primary-400 relative inline-flex h-full cursor-pointer items-center justify-center overflow-hidden rounded-md focus-within:ring-2"
      >
        <img
          alt="Avatar"
          class="min-h-full object-cover"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="bg-theme-secondary-900 flex h-full items-center justify-center rounded-full opacity-85 dark:bg-black"
          >
            <div
              class="dark:text-theme-secondary-200 text-white"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="relative font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 flex h-5 w-5 items-center justify-center p-0"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not allow to upload an invalid file image 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="profile-image focus-within:ring-theme-primary-400 relative inline-flex h-full cursor-pointer items-center justify-center overflow-hidden rounded-md focus-within:ring-2"
      >
        <img
          alt="Avatar"
          class="min-h-full object-cover"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="bg-theme-secondary-900 flex h-full items-center justify-center rounded-full opacity-85 dark:bg-black"
          >
            <div
              class="dark:text-theme-secondary-200 text-white"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="relative font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 flex h-5 w-5 items-center justify-center p-0"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not allow to upload when user aborted a request 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="profile-image focus-within:ring-theme-primary-400 relative inline-flex h-full cursor-pointer items-center justify-center overflow-hidden rounded-md focus-within:ring-2"
      >
        <img
          alt="Avatar"
          class="min-h-full object-cover"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="bg-theme-secondary-900 flex h-full items-center justify-center rounded-full opacity-85 dark:bg-black"
          >
            <div
              class="dark:text-theme-secondary-200 text-white"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="relative font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 flex h-5 w-5 items-center justify-center p-0"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not handle upload file 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="profile-image focus-within:ring-theme-primary-400 relative inline-flex h-full cursor-pointer items-center justify-center overflow-hidden rounded-md focus-within:ring-2"
      >
        <img
          alt="Avatar"
          class="min-h-full object-cover"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="bg-theme-secondary-900 flex h-full items-center justify-center rounded-full opacity-85 dark:bg-black"
          >
            <div
              class="dark:text-theme-secondary-200 text-white"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="relative font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 flex h-5 w-5 items-center justify-center p-0"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="profile-image focus-within:ring-theme-primary-400 relative inline-flex h-full cursor-pointer items-center justify-center overflow-hidden rounded-md focus-within:ring-2"
      >
        <img
          alt="Avatar"
          class="min-h-full object-cover"
          data-testid="SelectProfileImage__avatar-image"
        />
        <button
          class="absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="bg-theme-secondary-900 flex h-full items-center justify-center rounded-full opacity-85 dark:bg-black"
          >
            <div
              class="dark:text-theme-secondary-200 text-white"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="relative font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 flex h-5 w-5 items-center justify-center p-0"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render with value svg 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 focus-within:border-theme-primary-400 h-[92px] w-[92px] rounded-lg border p-1.5 focus-within:border-solid"
    >
      <div
        class="h-full overflow-hidden rounded"
      >
        <div
          class="upload-button-wrapper h-full w-full"
        >
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white dim:bg-theme-dim-800 dim:text-theme-dim-50"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="arrow-up-bracket"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render without value svg 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row"
  >
    <div
      class="relative z-0 h-[92px] w-[92px]"
    >
      <div
        class="profile-image focus-within:ring-theme-primary-400 relative inline-flex h-full cursor-pointer items-center justify-center overflow-hidden rounded-md focus-within:ring-2"
      >
        <img
          alt="Avatar"
          class="min-h-full object-cover"
          data-testid="SelectProfileImage__avatar-image"
          src="test"
        />
        <button
          class="absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-hidden"
          data-testid="SelectProfileImage__upload-button"
          type="button"
        >
          <div
            class="bg-theme-secondary-900 flex h-full items-center justify-center rounded-full opacity-85 dark:bg-black"
          >
            <div
              class="dark:text-theme-secondary-200 text-white"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="arrow-up-bracket"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="absolute -top-2 -right-2 z-20"
      >
        <button
          class="relative font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 disabled:cursor-not-allowed bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-300 focus:ring-theme-danger-300 flex h-5 w-5 items-center justify-center p-0"
          data-testid="SelectProfileImage__remove-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="cross"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
